--- a/project/package.json
+++ b/project/package.json
@@ -18,7 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .tsx --ext .ts src/"
+    "lint": "eslint --ext .tsx --ext .ts src/",
+    "format": "prettier --write src/"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +56,7 @@
     "axios-mock-adapter": "^1.19.0",
     "eslint-config-htmlacademy": "^4.1.0",
     "faker": "^5.5.3",
+    "prettier": "^2.5.1",
     "redux-devtools-extension": "2.13",
     "typescript": "^4.5.5"
   }
