--- a/project/package.json
+++ b/project/package.json
@@ -54,6 +54,7 @@
     "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.3",
     "axios-mock-adapter": "^1.19.0",
+    "dayjs": "^1.10.8",
     "eslint-config-htmlacademy": "^4.1.0",
     "faker": "^5.5.3",
     "prettier": "^2.5.1",
