--- a/project/package.json
+++ b/project/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "reselect": "^4.0.0"
   },
   "scripts": {
@@ -52,7 +53,6 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
-    "@types/react-router-dom": "^5.3.3",
     "axios-mock-adapter": "^1.19.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.8",
